Revert Logcosh registered_name to Logcosh and update docs [ci skip]

--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -4264,7 +4264,7 @@ This implements a Logcosh. The gradient of the prior is computed as follows:
 }
   These are the keywords that can be used in addition to the ones listed in \ref{sec:priors}..
   \begin{verbatim}
-  prior type := Logcosh Prior
+  prior type := Logcosh
   Logcosh Prior Parameters:=
   ; next defaults to 0, set to 1 for 2D inverse Euclidean weights, 0 for 3D 
   only 2D:= 0
