--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -2943,6 +2943,22 @@ choose one file from the directory), the JSON file containing the conversion slo
 The optional \textit{kilovoltage\_peak} is the kilovoltage peak (kVp) used to acquire the data. If no value is given,
 a kVp of 120 is assumed. 
 
+{ \subsubsubsection{compute\_sqrt\_Hessian\_row\_sum} \label{sec:Utilities:HessianRowSum}
+}
+This executable can be used to generate the square root of the Hessian row sum of an objective function, the output of
+which maybe used as a spatially variant penalty strength $\kappa$ (or \textit{kappa image}) within iterative
+reconstruction algorithms, see \ref{sec:priors:Quadratic}.
+
+This utility computes a Hessian of the objective function and multiplies it by the forward projection of ones in
+data space before backprojection into image space. The square root of the image is saved to file. Along with a method
+to compute the Hessian row sum, we include an optional method to approximate Hessian row sum that is less computational
+and does not require an estimate image for the the Hessian computation (but does require one for an output image
+template).
+
+Basic Usage:
+\cmdline{compute\_sqrt\_Hessian\_row\_sum compute\_sqrt\_Hessian\_row\_sum.par}
+An example parameter file is included in the samples folder.
+
 \subsubsection{
 Converting data}
 \label{sec:convertingdata}
@@ -4166,6 +4182,7 @@ This implements a quadratic Gibbs prior. The gradient of the prior is computed a
   Jeff Fessler's papers. It should have identical dimensions to the image for which the
   penalty is computed. If $\kappa$ is not set, this class will effectively
   use 1 for all $\kappa$'s.
+  The utility \textit{compute\_sqrt\_Hessian\_row\_sum} \ref{sec:Utilities:HessianRowSum} may be used to generate such images.
 
   By default, a 3x3 or 3x3x3 neigbourhood is used where the weights are set to 
   x-voxel\_size divided by the Euclidean distance between the points.
