--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -2946,11 +2946,10 @@ a kVp of 120 is assumed.
 { \subsubsubsection{compute\_sqrt\_Hessian\_row\_sum} \label{sec:Utilities:HessianRowSum}
 }
 This executable can be used to generate the square root of the Hessian row sum of an objective function, the output of
-which maybe used as a spatially variant penalty strength $\kappa$ (or \textit{kappa image}) within iterative
+which may be used as a spatially variant penalty strength $\kappa$ (or \textit{kappa image}) within iterative
 reconstruction algorithms, see \ref{sec:priors:Quadratic}.
 
-This utility computes a Hessian of the objective function and multiplies it by the forward projection of ones in
-data space before backprojection into image space. The square root of the image is saved to file. Along with a method
+This utility computes the row-sum of the Hessian of the objective function at a given image (by multiplying it with a vector of ones). The square root of the image is saved to file. Along with a method
 to compute the Hessian row sum, we include an optional method to approximate Hessian row sum that is less computational
 and does not require an estimate image for the the Hessian computation (but does require one for an output image
 template).
