--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -1862,7 +1862,7 @@ only_2D:=1
 ; the following is the output prefix of the PET reconstructed image
 kernelised output filename prefix :=KOSMAPOSL
 
-;the following is only set if you want to freeze the kernel matrix to a certain subiteration. Default is -1
+;the following is only set if you want to freeze the kernel matrix after a certain subiteration. Default is -1
 ;freeze iterative kernel at subiteration number :=21
 
 objective function type:= PoissonLogLikelihoodWithLinearModelForMeanAndProjData
