Minor users guide fix

--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -800,9 +800,9 @@ as the OpenGATE project might be distributing files
 to enable STIR to read \textit{LMF} format files.
 
 \subsubsubsection{ROOT exclusion keys configurations}
-The \textit{exclude xxx events := 0} keys can be used to process specific types of events.
+The \textit{exclude xxx events := 1} keys can be used to process specific types of events.
 Below is are sets event types that will be processed with an exclusion or combination of exclusions.
-Not not mentioned, the exclusion of event type is false.
+The exclusions of an event type is false by default.
 
 \begin{table}[h]
     \centering
