Update documentation/STIR-UsersGuide.tex [ci skip]

--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -801,7 +801,7 @@ to enable STIR to read \textit{LMF} format files.
 
 \subsubsubsection{ROOT exclusion keys configurations}
 The \textit{exclude xxx events := 1} keys can be used to process specific types of events.
-Below is are sets event types that will be processed with an exclusion or combination of exclusions.
+Below are sets event types that will be processed with an exclusion or combination of exclusions.
 The exclusions of an event type is false by default.
 
 \begin{table}[h]
