1) Add new variable in UserGuide; 2)fix radionuclide operatr ==

--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -63,7 +63,9 @@ T. Beisel \\
 C. Falc\'{o}n \\
 {\it \small Univ. of Barcelona} \\
 R. Twyman \\
-{\it \small University College London}
+{\it \small University College London}\\
+D. Deidda \\
+{\it \small National Physical Laboratory}
 \\
 \\
 
@@ -312,6 +314,10 @@ the developer's guide.}\\
 % ROW 
 {\raggedright \textit{STIR\_ENABLE\_EXPERIMENTAL}} & 
 {\raggedright Toggles between ON, OFF. Enable to use experimental features in \textit{STIR}.}\\
+\hline
+% ROW 
+{\raggedright \textit{STIR\_CONFIG\_DIR}} & 
+{\raggedright Contains the location of the \textit{STIR} configuration folder. There you can find for example a JSON file used for the estimation of attenuation factors from a CT image.}\\
 \hline
 \end{longtable}
 
