--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -189,7 +189,7 @@ instructions for this library are available on its github page.
 The \texttt{Radionuclide} functionality also parses files in JSON format. 
 To use and install these files the variable texttt{STIR_CONFIG_DIR} needs to be set via cmake. 
 This allows you to read JSON files that you may have modified and install them in the config folder.
-The default value is set to "STIR/src/config/" and will be installed in your install folder  in " share/stir/config"
+The default value is set to \textt{STIR/src/config/} and will be installed in your install folder  in \textt{share/stir/config}
 
 
 \subsubsection{
