Update conversion notes

--- a/src/experimental/GE_data_tests/plot_GE_singles_info.ipynb
+++ b/src/experimental/GE_data_tests/plot_GE_singles_info.ipynb
@@ -11,6 +11,7 @@
     "SPDX-License-Identifier: Apache-2.0\n",
     "See STIR/LICENSE.txt for details\n",
     "\n",
+    "There is no difference between the python and iPython scripts here. The scripts are converted using the `p2j` command line utility.\n",
     "\n",
     "# Script for plotting and investigating GE singles information\n",
     "It was observed that the STIR `construct_randoms_from_GEsingles` utility was overestimating the randoms from singles by approximately 25% to 33%.\n",
